Add an image to Raid#new's 'Reset' button so its height is the same as Save's

--- a/app/views/raids/new.html.haml
+++ b/app/views/raids/new.html.haml
@@ -24,4 +24,4 @@
     
     .buttons
       = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
-      = styled_button(:type => 'reset')
+      = styled_button(:type => 'reset', :image => 'form_delete.png')
