Add the note field directly onto the form. So far, no support for getting it from the item name with brackets.

--- a/app/views/wishlists/_form.html.haml
+++ b/app/views/wishlists/_form.html.haml
@@ -5,6 +5,9 @@
     
     = f.label :item_name, 'Item Name'
     = f.text_field :item_name, :class => 'large'
+    
+    = f.label :note, 'Note'
+    = f.text_field :note, :class => 'large'
 
     .radio-check
       = f.radio_button :priority, 'normal'
