Index/New/Create/Destroy functionality in the WishlistsController with specs. No fancy AJAX just yet. Starting with the basics.

--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -49,6 +49,9 @@ fieldset
     
   // Special cases for divs used for radio/check boxes
   div.radio-check
+    div
+      :display inline
+      
     label
       :display inline
       :margin 0 20px 0 0
