--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -25,9 +25,11 @@ table.list
       :color = !table_border_color
   td
     :padding 5px
-    :vertical-align top
+    :vertical-align middle
     :border-right 1px solid
       :color = !table_border_color
+    img
+      :vertical-align bottom
   tbody
     tr
       &:hover
