Get rid if _wishlist_row partial use.

--- a/app/views/members/_wishlist.html.haml
+++ b/app/views/members/_wishlist.html.haml
@@ -6,6 +6,6 @@
       %th Type
   %tbody
     %tr{ :class => cycle('even', 'odd') }
-      %td= link_to_item_with_stats(wishlist_row.item)
-      %td= h(wishlist_row.note)
-      %td= h(wishlist_row.priority.titlecase)
+      %td= link_to_item_with_stats(wishlist.item)
+      %td= h(wishlist.note)
+      %td= h(wishlist.priority.titlecase)
