--- a/app/views/wishlists/_form.html.haml
+++ b/app/views/wishlists/_form.html.haml
@@ -1,28 +1,18 @@
-%fieldset.center
-  %legend.hidden Add Wishlist
-  - form_for @wishlist do |f|
-    - unless f.error_messages.empty?
-      .error= f.error_messages
-    
-    = f.label :item_name, 'Item Name'
-    = f.text_field :item_name, :class => 'large'
-    
-    = f.label :note, 'Note'
-    = f.text_field :note, :class => 'large'
+= form.label :item_name, 'Item Name'
+= form.text_field :item_name, :class => 'large'
 
-    .radio-check
-      = f.radio_button :priority, 'best in slot'
-      = f.label :priority_best_in_slot, 'Best in Slot'
-      
-      = f.radio_button :priority, 'normal'
-      = f.label :priority_normal, 'Normal'
+= form.label :note, 'Note'
+= form.text_field :note, :class => 'large'
+
+.radio-check
+  = form.radio_button :priority, 'best in slot'
+  = form.label :priority_best_in_slot, 'Best in Slot'
   
-      = f.radio_button :priority, 'rot'
-      = f.label :priority_rot, 'Rot'
-  
-      = f.radio_button :priority, 'situational'
-      = f.label :priority_situational, 'Situational'
-    
-    .buttons
-      = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
-      = styled_button(:type => 'reset', :image => 'form_delete.png')
+  = form.radio_button :priority, 'normal'
+  = form.label :priority_normal, 'Normal'
+
+  = form.radio_button :priority, 'rot'
+  = form.label :priority_rot, 'Rot'
+
+  = form.radio_button :priority, 'situational'
+  = form.label :priority_situational, 'Situational'
