--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -31,11 +31,6 @@
       %th.image &nbsp;
   %tbody#wishlist
     - @wishlists.each do |wishlist|
-      %tr{ :class => cycle('even', 'odd'), :id => "wishlist-#{wishlist.id}" }
-        %td= link_to_member(wishlist.member) unless wishlist.member_id.nil?
-        %td= h(wishlist.item.name) unless wishlist.item_id.nil?
-        %td= h(wishlist.priority.titlecase)
-        %td= h(wishlist.note)
-        %td.image= link_to_remote_delete(wishlist)
+      = render :partial => "wishlist_row", :object => wishlist
 %br
 = render :partial => 'form_inline'
