Add Edit and Update methods; add Edit form, non-AJAX

--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -84,7 +84,7 @@ th.lootfactor, td.lootfactor
 th.image, td.image, th.checkbox, td.checkbox
   :text-align center
   :min-width 16px
+  :max-width 48px
+  :padding 0
 th.center, td.center
   :text-align center
-th.fill, td.fill
-  :width 100%
