--- a/app/views/wishlists/_wishlist_row.html.haml
+++ b/app/views/wishlists/_wishlist_row.html.haml
@@ -3,4 +3,6 @@
   %td= h(wishlist_row.item.name) unless wishlist_row.item_id.nil?
   %td= h(wishlist_row.priority.titlecase)
   %td= h(wishlist_row.note)
-  %td.image= link_to_remote_delete(wishlist_row)
+  %td.image{ :width => "48px" }
+    = link_to image_tag('edit.png'), edit_wishlist_path(wishlist_row)
+    = link_to_remote_delete(wishlist_row)
