--- a/app/views/wishlists/edit.html.haml
+++ b/app/views/wishlists/edit.html.haml
@@ -1,6 +1,6 @@
-%h2=breadcrumb 'Wishlist', link_to('Add', new_wishlist_path)
+%h2=breadcrumb 'Wishlist', 'Edit'
 %fieldset.center
-  %legend.hidden Add New Wishlist Entry
+  %legend.hidden Edit Wishlist Entry
   - form_for @wishlist do |f|
     - unless f.error_messages.empty?
       .error= f.error_messages
