--- a/app/views/wishlists/_wishlist_row.html.haml
+++ b/app/views/wishlists/_wishlist_row.html.haml
@@ -2,7 +2,7 @@
   %td= link_to_member(wishlist_row.member) unless wishlist_row.member_id.nil?
   %td= h(wishlist_row.item.name) unless wishlist_row.item_id.nil?
   %td= h(wishlist_row.priority.titlecase)
-  %td= h(wishlist_row.note)
+  %td.edit-note= h(wishlist_row.note)
   %td.image{ :width => "48px" }
     = link_to image_tag('edit.png'), edit_wishlist_path(wishlist_row)
     = link_to_remote_delete(wishlist_row)
