Fix .buttons styling for in-place editing.

--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -78,3 +78,10 @@ fieldset
       :border-bottom-color red
     ul
       :margin 0 20px
+      
+.editable
+  .buttons, .buttons a, .buttons button
+    :display inline
+    :float none
+    :padding 0 0 3px 3px
+    :margin 0
