--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -1,23 +1,11 @@
 :javascript
+  auth_token = '#{form_authenticity_token}';
+  
   $(document).ready(function() {
     sortWishlistTable();
 
-    $('.edit-note').editable(function(value) 
-      {
-        id = $(this).parent().attr('id').replace(/wishlist-/,'');
-        $.ajax({
-          data: $.param({ id: id, 'wishlist[note]': value, authenticity_token: encodeURIComponent('#{form_authenticity_token}')}),
-          dataType: 'script', 
-          type:'put', 
-          url:'/wishlists/' + id
-        }); return value;
-      }, 
-      { 
-        indicator: "<i>Saving...</i>",
-        tooltip:   "Click to edit...",
-        style:     "inherit",
-        width:     200
-      });
+    wishlistEditablePriority();
+    wishlistEditableNote();
   });
 %h2= breadcrumb('Wishlists')
 %table#wishlists.list.tablesorter
