Get rid of inline edit JS.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
   %head
     %title= @page_title || "JuggRails"
     %script{ 'type' => 'text/javascript', :src => "http://www.wowhead.com/widgets/power.js" }
-    = javascript_include_tag 'jquery', 'jquery.ui', 'jquery.tablesorter.min', 'jquery.jeditable.min', 'application'
+    = javascript_include_tag 'jquery', 'jquery.ui', 'jquery.tablesorter.min', 'application'
     
     = stylesheet_link_tag 'application', 'basic', 'forms', 'layout', 'tables', 'tabs'
     
