Fully-AJAX inline Add/Edit/Delete wishlisting!

--- a/app/views/wishlists/_form_inline.html.haml
+++ b/app/views/wishlists/_form_inline.html.haml
@@ -1,4 +1,4 @@
-#wishlist-form{ :style => "display: none" }
+#wishlist-new{ :style => "display: none" }
   %fieldset
     %legend.hidden Add Wishlist Entry
     #errors.error.hidden
@@ -6,6 +6,6 @@
       = render :partial => 'form', :object => f
       .buttons
         = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
-        = link_to_function(image_tag('cancel.png') + 'Cancel', "$('#wishlist-form').hide(); $('#wishlist-toggle').show()")
+        = link_to_function(image_tag('cancel.png') + 'Cancel', "$('#wishlist-new').hide(); $('#wishlist-toggle').show()")
 #wishlist-toggle.buttons
-  = link_to_function(image_tag('add.png') + 'Add Entry', "$('#wishlist-form').show(); $('#wishlist_item_name').focus(); $('#wishlist-toggle').hide()")
+  = link_to_function(image_tag('add.png') + 'Add Entry', "$('#wishlist-new').show(); $('#wishlist_item_name').focus(); $('#wishlist-toggle').hide()")
