--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -1,23 +1,19 @@
 :javascript
-  auth_token = '#{form_authenticity_token}';
-  
   $(document).ready(function() {
     sortWishlistTable();
-
-    wishlistEditablePriority();
-    wishlistEditableNote();
   });
 %h2= breadcrumb('Wishlists')
 %table#wishlists.list.tablesorter
   %thead
     %tr
-      %th Member
-      %th Priority
       %th Item
+      %th Priority
       %th Note
+      %th Slot
       %th.image &nbsp;
   %tbody#wishlist
     - @wishlists.each do |wishlist|
       = render :partial => "wishlist_row", :object => wishlist
 %br
+#wishlist-edit{ :style => "display: none" }'
 = render :partial => 'form_inline'
