Forgot I replaced image_tag's double quotes with single quotes to match our Haml output style.

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -26,13 +26,13 @@
     %span.small Situational
 #member_tabs
   %ul
-    / %li= link_to_tab("Raids (#{@raids_count})")
-    / %li= link_to_tab("Loots (#{@loots.size})")
-    / %li= link_to_tab("Punishments (#{@punishments.size})")
-    %li= link_to_tab("Wishlist (#{@member.wishlists.size})")
+    %li= link_to_tab("Raids (#{@raids_count})")
+    %li= link_to_tab("Loots (#{@loots.size})")
+    %li= link_to_tab("Punishments (#{@punishments.size})")
+    %li= link_to_tab("Wishlist")
     %li= link_to_tab('Achievements')
-  / #raids= render :partial => 'raids'
-  / #loots= render :partial => 'loots'
-  / #punishments= render :partial => 'punishments'
+  #raids= render :partial => 'raids'
+  #loots= render :partial => 'loots'
+  #punishments= render :partial => 'punishments'
   #wishlist= render :partial => 'wishlist'
   #achievements
