We're starting to resemble a working wishlist view. We're using a temporary 'globalview' action in the controller until we move Wishlist into the Member resource and can just use 'index'

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -73,6 +73,21 @@
   :background-color #FFFFFF
   :padding 15px
   :max-width 90%
+  ul
+    :margin 3px 20px
+    li
+      :padding 2px
+  #sidebar
+    :background-color = !table_header_background
+    :border
+      :width 1px
+      :style solid
+      :color = !table_border_color
+    :width 280px
+    :padding 10px
+    :float left
+  #content
+    :margin-left 325px
   
 #member_stats
   :text-align center
