--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -29,6 +29,12 @@ h2
   a
     :text-decoration none
     
+h3
+  :border-bottom 1px solid #BBBBBB
+  :margin 5px 0
+  a
+    :text-decoration none
+    
 abbr
   :cursor help
   
