--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -16,12 +16,16 @@ body
 img
   :border none
 
+h1, h2, h3, h4, h5
+  :font-family "Helvetica Neue", Arial, Helvetica, sans-serif
+
 h1
-  :font-size 2em
+  :font-size 2.4em
   :padding 0
   :margin 0
 
 h2
+  :font-size 1.8em
   :border-bottom 1px solid #BBBBBB
   :color #444444
   :margin 0 0 10px 0
@@ -29,7 +33,8 @@ h2
   a
     :text-decoration none
     
-h3
+h4
+  :font-size 1.3em
   :border-bottom 1px solid #BBBBBB
   :margin 5px 0
   a
