--- a/app/views/wishlists/globalview.html.haml
+++ b/app/views/wishlists/globalview.html.haml
@@ -5,18 +5,20 @@
     - @root.each do |zone|
       %li
         = link_to_function(h(zone.object.name), "$('ul#zone-#{zone.object.id}').toggle('slow')")
-        %ul{ :style => 'display: none', :id => "zone-#{zone.object.id}" }
+        %ul{ :id => "zone-#{zone.object.id}" }
           - zone.children.each do |boss|
             %li{ :id => "zone-#{boss.object.id}" }
               = link_to h(boss.object.name), "?boss=#{boss.id}"
 #content.clearfix
   - @items.each do |item|
-    %h3= link_to_wowhead(item.object)
-    %table.list
-      %tbody
-        - item.object.wishlists.each do |wishlist|
-          %tr{ :class => cycle('even', 'odd') }
-            %td.member{ :style => 'max-width: 150px' }= link_to_member(wishlist.member)
-            %td{ :style => 'width: 150px'}= h(wishlist.priority.titlecase)
-            %td{ :style => 'width: 60%' }= h(wishlist.note)
-            %td.lootfactor= number_with_precision(wishlist.member.lf, :precision => 2)
+    - unless item.object.wishlists.count == 0
+      .wishlist-group
+        %h4= link_to_wowhead(item.object)
+        %table.list
+          %tbody
+            - item.object.wishlists.each do |wishlist|
+              %tr{ :class => cycle('even', 'odd') }
+                %td.member{ :style => 'max-width: 150px' }= link_to_member(wishlist.member)
+                %td{ :style => 'width: 60%' }= h(wishlist.note)
+                %td{ :style => 'width: 100px'}= h(wishlist.priority.titlecase)
+                %td.lootfactor= number_with_precision(wishlist.member.lf_type(wishlist.priority), :precision => 2)
