Add counter caches for Wishlist to Member and Item. Member is being a bitch like how Raid used to be for attendees count.

--- a/app/views/wishlists/globalview.html.haml
+++ b/app/views/wishlists/globalview.html.haml
@@ -11,7 +11,7 @@
               = link_to h(boss.object.name), "?boss=#{boss.id}"
 #content.clearfix
   - @items.each do |item|
-    - unless item.object.wishlists.count == 0
+    - unless item.object.wishlists.size == 0
       .wishlist-group
         %h4= link_to_wowhead(item.object)
         %table.list
