Make the #sidebar div move with the page.

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -81,7 +81,8 @@
       :color = !table_border_color
     :width 280px
     :padding 10px
-    :float left
+    :position fixed
+    :top 115px
     ul
       :margin 3px 20px
       li
