--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,9 @@
 %html{html_attrs('en-US')}
   %head
     %title= @page_title || "JuggRails"
-    %script{ 'type' => 'text/javascript', :src => "http://www.wowhead.com/widgets/power.js" }
-    = javascript_include_tag 'jquery', 'jquery.ui', 'jquery.tablesorter.min', 'application'
+    = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'
+    = javascript_include_tag 'jquery.ui', 'jquery.tablesorter.min', 'application'
+    = javascript_include_tag 'http://www.wowhead.com/widgets/power.js'
     
     = stylesheet_link_tag 'application', 'basic', 'forms', 'layout', 'tables', 'tabs'
     
