--- a/app/views/members/_wishlist.html.haml
+++ b/app/views/members/_wishlist.html.haml
@@ -1,7 +1,18 @@
-%table.list
+:javascript
+  $(document).ready(function() {
+    sortWishlistTable();
+  });
+%table#wishlists.list.tablesorter
   %thead
     %tr
       %th Item
-      %th.note Note
-      %th Type
-  %tbody
+      %th Priority
+      %th Note
+      %th Slot
+      %th.image &nbsp;
+  %tbody#wishlist
+    - @member.wishlists.each do |wishlist|
+      = render :partial => "wishlists/wishlist_row", :object => wishlist
+%br
+#wishlist-edit{ :style => "display: none" }'
+= render :partial => 'wishlists/form_inline'
