--- a/app/views/wishlists/_form_inline.html.haml
+++ b/app/views/wishlists/_form_inline.html.haml
@@ -2,8 +2,8 @@
   %fieldset
     %legend.hidden Add Wishlist Entry
     #errors.error.hidden
-    - remote_form_for :wishlist, @wishlist, :url => wishlists_path, :html => { :method => :post } do |f|
-      = render :partial => 'form', :object => f
+    - remote_form_for :wishlist, @wishlist, :url => member_wishlists_path(@member), :html => { :method => :post } do |f|
+      = render :partial => 'wishlists/form', :object => f
       .buttons
         = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
         = link_to_function(image_tag('cancel.png') + 'Cancel', "$('#wishlist-new').hide(); $('#wishlist-toggle').show()")
