--- a/app/views/wishlists/_wishlist_row.html.haml
+++ b/app/views/wishlists/_wishlist_row.html.haml
@@ -4,5 +4,5 @@
   %td= h(wishlist_row.note)
   %td= h(wishlist_row.item.item_stat.slot) unless wishlist_row.item_id.nil? or wishlist_row.item.item_stat_id.nil?
   %td.image{ :width => "48px" }
-    = link_to_function(image_tag('edit.png'), "wishlistEditForm('#{edit_wishlist_path(wishlist_row)}')")
-    = link_to_remote_delete(wishlist_row)
+    = link_to_function(image_tag('edit.png'), "wishlistEditForm('#{edit_member_wishlist_path(@member, wishlist_row)}')")
+    = link_to_remote_delete(wishlist_row, :url => member_wishlist_path(@member, wishlist_row))
