Table sorting, and/or zebra rows wasn't getting applied to the wishlist table after the move.

--- a/app/views/members/_wishlist.html.haml
+++ b/app/views/members/_wishlist.html.haml
@@ -2,7 +2,7 @@
   $(document).ready(function() {
     sortWishlistTable();
   });
-%table#wishlists.list.tablesorter
+%table.list.tablesorter
   %thead
     %tr
       %th Item
