Use reset_cycle and switch start with an 'odd' class so that our first row isn't white, since we don't use headers in the wishlist view.

--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -6,8 +6,9 @@
         %h4= link_to_wowhead(item.object)
         %table.list
           %tbody
+            - reset_cycle
             - item.object.wishlists.each do |wishlist|
-              %tr{ :class => cycle('even', 'odd') }
+              %tr{ :class => cycle('odd', 'even') }
                 %td.member{ :style => 'max-width: 150px' }= link_to_member(wishlist.member)
                 %td{ :style => 'width: 60%' }= h(wishlist.note)
                 %td{ :style => 'width: 100px'}= h(wishlist.priority.titlecase)
