Weird issue with table sorting. Apparently if we run .tabs() before the tablesorter, zebra rows get broken(?)

--- a/app/views/raids/show.html.haml
+++ b/app/views/raids/show.html.haml
@@ -1,5 +1,9 @@
 :javascript
   $(document).ready(function(){
+    $("table#loot").tablesorter({ sortList: [[0,0]], widgets: ['zebra'] });
+    $('#itemfilter span.filter').click(function() {
+      toggleItemTypes(this);
+    });
     $("#raid_tabs").tabs();
   });
   
