Member#show tabs are now AJAX loaded, with local caching so that the tab isn't loaded every time it's clicked.

--- a/app/views/members/_wishlist.html.haml
+++ b/app/views/members/_wishlist.html.haml
@@ -2,7 +2,7 @@
   $(document).ready(function() {
     sortWishlistTable();
   });
-%table.list.tablesorter
+%table#wishlists.list.tablesorter
   %thead
     %tr
       %th Item
