Add Javascript to sort the wishlist tables, and hide unwanted items.

--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -35,8 +35,8 @@ h2
     
 h4
   :font-size 1.3em
-  :border-bottom 1px solid #BBBBBB
-  :margin 5px 0
+  / :border-bottom 1px solid #BBBBBB
+  :margin 15px 0 3px 0
   a
     :text-decoration none
   img.copy
