--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -1,14 +1,20 @@
 %h2 Global Wishlist View
 #content.clearfix
   - @items.each do |item|
-    - unless item.object.wishlists.size == 0
-      .item-group
-        %h4= link_to_wowhead(item.object)
-        %table.list
-          %tbody
-            - reset_cycle
-            - item.object.wishlists.each do |wishlist|
-              %tr{ :class => cycle('odd', 'even') }
+    .item-group
+      %h4= link_to_item_with_stats(item.object)
+      %table.list.tablesorter
+        %thead
+          %tr
+            %th Member
+            %th Note
+            %th Priority
+            %th LF
+        %tbody
+          - reset_cycle
+          - item.object.wishlists.each do |wishlist|
+            - if wishlist.member.active?
+              %tr{ :class => cycle('even', 'odd') }
                 %td.member{ :style => 'max-width: 150px' }= link_to_member(wishlist.member)
                 %td{ :style => 'width: 60%' }= h(wishlist.note)
                 %td{ :style => 'width: 100px'}= h(wishlist.priority.titlecase)
@@ -25,16 +31,7 @@
               
 :javascript
   $(document).ready(function() {
-    $('#sidebar ul ul').each(function() {
-      if ($(this).attr('id') != 'zone-#{@zone.id}') {
-        $(this).hide();
-      }
-      else {
-        $(this).children().each(function() {
-          if ($(this).attr('id') == 'boss-#{@boss.id}') {
-            $(this).html('<b>' + $(this).text() + '</b>');
-          }
-        });
-      }
-    });
+    wishlistMenu(#{@zone.id}, #{@boss.id});
+    wishlistHideUnwanted();
+    wishlistSortTables();
   });
