Fix Members#new template.

--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,4 +1,4 @@
-%h2= breadcrumb link_to('Members', members_path), New
+%h2= breadcrumb link_to('Members', members_path), 'New'
 %fieldset
   %legend.hidden New Member
   
