Make labels a pointer icon.

--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -12,6 +12,7 @@ fieldset
     :font-size 1.2em
     :font-weight bold
     :margin 0 0 5px
+    :cursor pointer
   
   input, textarea
     :color #484848
