--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,11 +28,11 @@
       #header.clearfix
         #main-menu.clearfix
           %ul
-            %li= link_to 'Members', members_path, :class => ( controller.controller_name == 'members' ) ? 'selected' : ''
-            %li= link_to 'Raids', raids_path, :class => ( controller.controller_name == 'raids' ) ? 'selected' : ''
-            %li= link_to 'Items', itemss_path, :class => ( controller.controller_name == 'items' ) ? 'selected' : ''
-            %li= link_to 'Loots', loots_path, :class => ( controller.controller_name == 'loots' ) ? 'selected' : ''
-            %li= link_to 'Wishlists', wishlists_path, :class => ( controller.controller_name == 'wishlists' ) ? 'selected' : ''
+            %li= link_to_controller(Member)
+            %li= link_to_controller(Raid)
+            %li= link_to_controller(Item)
+            %li= link_to_controller(Loot)
+            %li= link_to_controller(Wishlist)
             %li= link_to_login_or_logout
       #main
         - if flash[:error]
