Add zone and boss name to header.

--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -1,4 +1,4 @@
-%h2 Global Wishlist View
+%h2= breadcrumb 'Global Wishlist View', @zone, @boss
 #content.clearfix
   - @items.each do |item|
     .item-group
