--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -35,7 +35,7 @@
     %li= link_to_tab("Wishlist",    member_path(@member) + '/t.wishlist')
     %li= link_to_tab('Achievements', '#tachievements')
   #t-raids
-  #loots
+  #t-loots
   #t-punishments
   #t-wishlist
   #t-achievements
