Reverse the 'Membership' stuff. Instead, just add a 'user_id' field to Member. This seems to work if we associate through Member, and not InvisionUser (user.member = x)

--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -4,8 +4,8 @@
 = form.label :wow_class, 'Class'
 = form.select :wow_class, Member::WOW_CLASSES
 
-=# form.label :user, 'User'
-=# form.select :user, @users.collect { |u| [u.name, u.id] }, :include_blank => true
+= form.label :user_id, 'User'
+= form.select :user_id, @users.collect { |u| [u.name, u.id] }, :include_blank => true
 
 .radio-check
   = form.check_box :active
