--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -126,6 +126,16 @@ div.error
         :color = !table_header_background - 80
     &.gap
     
+div.actions
+  :display none
+  :float right
+  :display inline
+  :padding 3px 5px
+  :background-color #CCCCFF
+  :-moz-border-radius 2px
+span.actions
+  :float left
+    
 // Progress Bars - http://blog.leetsoft.com/2006/8/22/super-simple-css-bars
 // Also see http://wiki.github.com/paolodona/rails-widgets/progressbar
 div.progress-container
