--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,8 +28,8 @@
       #header.clearfix
         #main-menu.clearfix
           %ul
-            - unless @current_user.nil? or @current_user.member.nil?
-              %li= link_to 'My Standing', member_path(@current_user.member), :class => ( current_page?(member_path(@current_user.member)) ) ? 'selected' : ''
+            - unless current_user.nil? or current_user.member.nil?
+              %li= link_to 'My Standing', member_path(current_user.member), :class => ( current_page?(member_path(current_user.member)) ) ? 'selected' : ''
             %li= link_to_controller(Member, :admin_only => true)
             %li= link_to_controller(Raid, :admin_only => true)
             %li= link_to_controller(Item)
