--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -58,7 +58,7 @@
       :color #FFFFFF
       :display block
       :font-weight bold
-      :margin 0
+      :margin 0 5px 0 0
       :padding 4px 10px
       :text-decoration none
       &:hover
