Add an image to the member row if they don't have a user associated. This probably isn't the best way to show this information.

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -15,7 +15,7 @@
   %tbody
     - @members.each do |member|
       %tr{ :class => cycle('even', 'odd') }
-        %td= link_to_member(member)
+        %td{ :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
         %td= member.rank.name unless member.rank.nil?
         %td.attendance= member_attendance_colored(member.attendance_30)
         %td.attendance= member_attendance_colored(member.attendance_90)
