--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -30,6 +30,8 @@ table.list
       :color = !table_border_color
     img
       :vertical-align bottom
+  td.user-missing
+    :background url(/images/user_delete.png) no-repeat center right
   tbody
     tr
       &:hover
