--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -101,6 +101,9 @@ div.error
   :background-color #FAD3C5
   :border 1px solid #F03A31
   :color #F03A31
+noscript div.error
+  :margin 20px 10px
+  :font-size 2em
   
 // Pagination
 .pagination
