Add class icons to Member#index so we can sort by class. It feels a little busy right now, but that's probably because of the 'User Missing' images, and those won't be around long.

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -4,7 +4,8 @@
 %table#members.list.tablesorter
   %thead
     %tr
-      %th Name
+      %th &nbsp;
+      %th{ :style => 'min-width: 150px' } Name
       %th Rank
       %th.attendance 30-Day
       %th.attendance 90-Day
@@ -15,6 +16,7 @@
   %tbody
     - @members.each do |member|
       %tr{ :class => cycle('even', 'odd') }
+        %td.image{ :width => '16px'}= image_tag("classes/#{member.wow_class.downcase.gsub(/\s+/, '_')}.gif", :alt => member.wow_class)
         %td{ :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
         %td= member.rank.name unless member.rank.nil?
         %td.attendance= member_attendance_colored(member.attendance_30)
