--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -23,6 +23,8 @@ table.list
     :white-space nowrap
     :border-bottom 1px solid
       :color = !table_border_color
+    img
+      :vertical-align bottom
   td
     :padding 5px
     :vertical-align middle
