--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -1,6 +1,6 @@
 %h2= breadcrumb 'Averages'
 
-%table.list
+%table.list{ :style => 'font-size: 1.2em' }
   %thead
     %tr
       %th &nbsp;
@@ -10,39 +10,39 @@
   %tbody
     / Class Counts
     %tr{ :class => cycle('even', 'odd') }
-      %td Active
+      %td.right Active
       %td &nbsp;
       - @counts.each do |wow_class, count|
         %td.number= count
     / Attendance Averages
     %tr{ :class => cycle('even', 'odd') }
-      %td 30-Day
+      %td.right 30-Day
       %td.attendance= member_attendance_colored(@attendance_guild.avg_30.to_f)
       - @attendance.each do |group|
         %td.attendance= member_attendance_colored(group.avg_30.to_f)
     %tr{ :class => cycle('even', 'odd') }
-      %td 90-Day
+      %td.right 90-Day
       %td.attendance= member_attendance_colored(@attendance_guild.avg_90.to_f)
       - @attendance.each do |group|
         %td.attendance= member_attendance_colored(group.avg_90.to_f)
     %tr{ :class => cycle('even', 'odd') }
-      %td Lifetime
+      %td.right Lifetime
       %td.attendance= member_attendance_colored(@attendance_guild.avg_lifetime.to_f)
       - @attendance.each do |group|
         %td.attendance= member_attendance_colored(group.avg_lifetime.to_f)
     / Loot Factor Averages
     %tr{ :class => cycle('even', 'odd') }
-      %td Loot Factor
+      %td.right Loot Factor
       %td.attendance= number_with_precision(@lootfactor_guild.avg_lf.to_f, :precision => 2)
       - @lootfactor.each do |group|
         %td.attendance= number_with_precision(group.avg_lf.to_f, :precision => 2)
     %tr{ :class => cycle('even', 'odd') }
-      %td Best In Slot
+      %td.right Best In Slot
       %td.attendance= number_with_precision(@lootfactor_guild.avg_bislf.to_f, :precision => 2)
       - @lootfactor.each do |group|
         %td.attendance= number_with_precision(group.avg_bislf.to_f, :precision => 2)
     %tr{ :class => cycle('even', 'odd') }
-      %td Situational
+      %td.right Situational
       %td.attendance= number_with_precision(@lootfactor_guild.avg_sitlf.to_f, :precision => 2)
       - @lootfactor.each do |group|
         %td.attendance= number_with_precision(group.avg_sitlf.to_f, :precision => 2)
