Fix nil wow_class error.

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -16,7 +16,7 @@
   %tbody
     - @members.each do |member|
       %tr{ :class => cycle('even', 'odd') }
-        %td.image{ :width => '16px'}= image_tag("classes/#{member.wow_class.downcase.gsub(/\s+/, '_')}.gif", :alt => member.wow_class)
+        %td.image{ :width => '16px'}= image_tag("classes/#{member.wow_class.downcase.gsub(/\s+/, '_')}.gif", :alt => member.wow_class) unless member.wow_class.nil?
         %td{ :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
         %td= member.rank.name unless member.rank.nil?
         %td.attendance= member_attendance_colored(member.attendance_30)
