Change loot factor cutoff from 56 days to 52 days so stuff falls off in a better cycle.

--- a/app/views/punishments/_form.html.haml
+++ b/app/views/punishments/_form.html.haml
@@ -1,5 +1,6 @@
 = form.label :expires_string, 'Expires on'
 = form.text_field :expires_string, :class => 'small'
+%em Defaults to one full loot factor cycle (52 days)
 
 = form.label :reason
 = form.text_field :reason, :class => 'large'
